<?xml version="1.0"?>
<package format="2">
  <name>pal_navigation_cfg_ari</name>
  <version>2.0.3</version>
  <description>Robot specific config and launch files needed to run
    navigation on the ari robot.</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <license>Apache License 2.0</license>
  <author email="procopio.stein@pal-robotics.com">Procopio Stein</author>
  <author email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ari_rgbd_sensors</exec_depend>
  <exec_depend>pal_navigation_sm</exec_depend>
  <exec_depend>pal_karto</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>pal_vo_server</exec_depend>
  <exec_depend>highways_navigation</exec_depend>
  <exec_depend>polycost_layer</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>
  <exec_depend>blanking_recovery</exec_depend>
  <exec_depend>visited_recovery</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>pal_pcl</exec_depend>

</package>
